Refactor streams to use toList() method
With Java 17 `.collect(Collectors.toList())` can be written as `.toList()`