@@ -2,7 +2,6 @@ package io.openems.common.jsonrpc.response;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import com.google.gson.JsonArray;
 import com.google.gson.JsonElement;
@@ -64,7 +63,7 @@ public class AppCenterGetInstalledAppsResponse extends JsonrpcResponseSuccess {
 		return JsonUtils.stream(a) //
 				.map(JsonElement::getAsJsonObject) //
 				.map(Instance::from) //
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 	public AppCenterGetInstalledAppsResponse(UUID id, List<Instance> installedApps) {
