@@ -5,7 +5,6 @@ import java.util.LinkedList;
 import java.util.List;
 import java.util.Objects;
 import java.util.function.BiConsumer;
-import java.util.stream.Collectors;
 
 import io.openems.common.exceptions.OpenemsException;
 import io.openems.edge.core.host.Inet4AddressWithSubnetmask;
@@ -109,7 +108,7 @@ public class InterfaceConfiguration {
 		BiConsumer<List<InterfaceConfiguration>, InterfaceConfiguration> flatAdd = (t, u) -> {
 			var existingInterfaces = t.stream() //
 					.filter(i -> i.interfaceName.equals(u.interfaceName)) //
-					.collect(Collectors.toList());
+					.toList();
 			if (existingInterfaces.isEmpty()) {
 				t.add(u);
 				return;
@@ -117,7 +116,7 @@ public class InterfaceConfiguration {
 			var newInterface = new InterfaceConfiguration(u.interfaceName);
 			newInterface.getIps().addAll(existingInterfaces.stream() //
 					.flatMap(i -> i.getIps().stream()) //
-					.collect(Collectors.toList()));
+					.toList());
 		};
 		return Objects.requireNonNull(interfaceConfiguration).stream() //
 				.collect(ArrayList::new, flatAdd, (t, u) -> {
@@ -140,7 +139,7 @@ public class InterfaceConfiguration {
 				.forEach(i -> {
 					var otherInterfaces = other.stream() //
 							.filter(oi -> oi.interfaceName.equals(i.interfaceName)) //
-							.collect(Collectors.toList());
+							.toList();
 					if (otherInterfaces.isEmpty()) {
 						return;
 					}
