@@ -8,7 +8,6 @@ import java.util.List;
 import java.util.Set;
 import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 
 import com.google.common.collect.Streams;
 
@@ -215,7 +214,7 @@ public class Data {
 				ConstraintUtil.createSymmetricEssConstraints(this.coefficients, this.esss, this.symmetricMode).stream(), //
 				ConstraintUtil.createSinglePhaseEssConstraints(this.coefficients, this.inverters, this.symmetricMode)
 						.stream(), //
-				this.constraints.stream()).collect(Collectors.toList());
+				this.constraints.stream()).toList();
 	}
 
 	protected ManagedSymmetricEss getEss(String essId) {
